--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@
     align-items: center;
 }
 .display{
-    width: 100%;
-    height: 50px;
+    width: 300px;
+    height: 80px;
     font-size: 26px;
     border: 2px solid #EBEBEF;
     border-radius: 5px;
